refactor: Refactor en las validaciones + Tests orden